Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-389

Messenger asserts if it receives a RELEASED disposition

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • proton-0.4
    • proton-0.5
    • proton-c
    • None

    Description

      If messenger receives a disposition update with RELEASED state, it throws an assertion.

      python: .../proton/proton-c/src/messenger/store.c:295: disp2status: Assertion `0' failed.

      Attachments

        Activity

          People

            rhs Rafael H. Schloming
            tross Ted Ross
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: