PROTON-389: added all dispositions to switch statement

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1515860 13f79535-47bb-0310-9956-ffa450edef68